восстановил рус яз на хтмл, приложение запускается,