@@ -5,7 +5,9 @@ import org.springframework.core.io.ResourceLoader;
 import org.springframework.stereotype.Service;
 
 import java.io.IOException;
+import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 @Service
 public class ResourceRootPathConfiguration {
@@ -19,7 +21,11 @@ public class ResourceRootPathConfiguration {
     public static final String IMAGES = "resources/static";
 
     public Path getRootPathTo(String folderName) throws IOException {
-        var resource = resourceLoader.getResource(folderName);
-        return Path.of(resource.getFile().getAbsolutePath());
+        Path targetPath = Paths.get(folderName);
+
+        if (!Files.exists(targetPath)) {
+            Files.createDirectories(targetPath);
+        }
+        return targetPath.toAbsolutePath();
     }
 }
